# DragonBot

./: .dockerignore  .env.example  .gitignore  404.html  Dockerfile  DragonBot.py  README.md  channel.py  config.yaml  docker-compose-example.yml  index.html  main.py  mkdocs.yml  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
DATABASE/: index.html
DragonBot/: DragonBot.py  bug_id.json  channel_name.json  date_time.json
DragonBot/Game/: BlackJack.py  Tic_Tac_Toe.py
DragonBot/cogs/: admin.py  bug_reporting.py  channel.py  error.py  games.py  keyword.py  main_cmd.py  moneysys.py  monitor.py  online_time.py
DragonBot/config/: Mysql_info.py  Sorting.py  bot_info.py  feedback.py
adapters/: webhook_server.py  wordpress_client.py
cogs/: admin.py  bug_reporting.py  general.py  giveaway.py  help.py  keywords.py  misc.py  role_request.py  tickets.py  ticketscog.py
commands/keywords/: index.html
commands/roles/: index.html
config/: __init__.py  canned_response.py  constants.py  giveaway.json  logger.py  models.py  wordpressmodels.py
core/: __init__.py  bug_reporter.py  exceptions.py  feedback_manager.py  keyword_manager.py  role_requesting_manager.py  ticket_manager.py  ticket_panel_manager.py
db/: database_manager.py
docs/: DATABASE.md  index.md  網站客服單api.md
logs/: bot.log.2026-01-28
search/: search_index.json
utils/: checks.py  discord_utils.py  embed_utils.py  giveaway_embed.py  logger.py  transformers.py
view/: feedback_views.py  giveaway_settings.py  keyword_views.py  pagination_view.py  role_request_view.py  ticket_views.py
(+8 files in other folders)
